# gba-sprite-engine

./: CMakeLists.txt  CloseCombat.cpp  Damage.h  FarmBase.cpp  FarmBase.h  Game.cpp  Game.h  Health.h  Menu.cpp  README.md  Range.cpp  main.cpp  timespent.csv  timespent_Carl.csv  timespent_Guido.csv
demos/FarmWars_V1/: CMakeLists.txt
demos/FarmWars_V1/img/: convert.ps1
demos/FarmWars_V1/img/Sources/: gif to png.url
demos/FarmWars_V1/img/Sources/Eend/: eend.url
demos/FarmWars_V1/img/Sources/IntroScreen/: FarmWar.url
demos/FarmWars_V1/img/Sources/Kip/: kip.url
demos/FarmWars_V1/img/Sources/Kip/old/: Kip.url
demos/FarmWars_V1/img/Sources/Koe/: kou.url
demos/FarmWars_V1/img/Sources/Konijn/: konijn.url
demos/FarmWars_V1/img/Sources/Lama/: lama.url
demos/FarmWars_V1/img/Sources/Turtle/: turret.url
demos/FarmWars_V1/img/Sources/Yoda/: yoda.url
demos/FarmWars_V1/img/Sources/farm/: FarmLand.url
demos/FarmWars_V1/img/Sources/intro/: Webp.net-resizeimage.c  Webp.net-resizeimage.h
demos/FarmWars_V1/sprites/: bg_moon.c  bg_moon.h  bg_mountain.c  bg_mountain.h  bg_shared.c  bg_shared.h  eend.c  eend.h  eend_sprite.h  farm.h  kip.c  kip.h  kip_sprite.h  koe.c  koe.h  koe_sprite.h  konijn.c  konijn.h  konijn_sprite.h  lama.c  lama.h  lama_sprite.h  pixelFarm.c  pixelFarm.h  select.c  select.h  select_sprite.h  shared.c  shared.h  sharedpal.h  startscreen.h  turret.c  turret.h  yoda.c  yoda.h  yoda_sprite.h
demos/FarmWars_V1/src/: Animal.cpp  Animal.h  Base.cpp  Base.h  CloseCombat.h  Damage.cpp  FarmBase.cpp  FarmBase.h  Game.cpp  Game.h  Health.cpp  Menu.cpp  Menu.h  Range.h  Select.cpp  Select.h  main.cpp  main.h
demos/FarmWars_V1/src/Controllers/: GameController.cpp  GameController.h
demos/FarmWars_V1/src/Models/: Animal.cpp  Animal.h  AnimalStats.cpp  AnimalStats.h  Farm.cpp  Farm.h  FarmStats.cpp  FarmStats.h
demos/FarmWars_V1/src/Scenes/: IntroScene.cpp  IntroScene.h  MainScene.cpp  MainScene.h  SelectAnimalScene.cpp  SelectAnimalScene.h
demos/demo2-arkanoid/src/: arkanoid_game_scene.h
demos/demo3-foodthrowing/: CMakeLists.txt
demos/demo4-conway/src/: ConwaySeeder.cpp
engine/include/libgba-sprite-engine/: gba_engine.h
engine/src/: gba_engine.cpp
